--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "prettier": "3.3.3",
     "typescript": "^5"
   },
-  "prettier":{
+  "prettier": {
     "printWidth": 120,
     "useTabs": false,
     "tabWidth": 2,
     "trailingComma": "es5",
     "semi": true,
     "singleQuote": true,
+    "singleAttributePerLine": true,
     "bracketSpacing": true,
     "arrowParens": "always",
     "jsxSingleQuote": false,
