--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "next": "15.0.1",
+    "next-i18next": "^15.3.1",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
