--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "next": "15.0.3",
     "next-i18next": "^15.3.1",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-google-recaptcha": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-google-recaptcha": "^2.1.9",
     "eslint": "^9.14",
     "eslint-config-next": "15.0.3",
     "eslint-config-prettier": "^9.1.0",
