Update repo data

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -39,4 +39,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: ghcr.io/<your-username>/<repository-name>:${{ github.ref_name }}
+        tags: ghcr.io/arawnik/jela-react:${{ github.ref_name }}
