--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,11 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
+      args:
+        NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL}
+        NEXT_PUBLIC_RECAPTCHA_SITE_KEY: ${NEXT_PUBLIC_RECAPTCHA_SITE_KEY}
     ports:
-      - "8084:3000"
+      - "8085:3000"
     environment:
       - NEXT_PUBLIC_API_BASE_URL
       - NEXT_PUBLIC_RECAPTCHA_SITE_KEY
