--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
   },
   "dependencies": {
     "date-fns": "^4.1.0",
-    "next": "15.0.3",
-    "next-i18next": "^15.3.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "next": "15.3.3",
+    "next-i18next": "15.4.2",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-google-recaptcha": "^3.1.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^22.15.24",
+    "@types/react": "19.1.6",
+    "@types/react-dom": "19.1.5",
     "@types/react-google-recaptcha": "^2.1.9",
-    "eslint": "^9.14",
-    "eslint-config-next": "15.0.3",
-    "eslint-config-prettier": "^9.1.0",
-    "prettier": "3.3.3",
-    "typescript": "^5"
+    "eslint": "^9.27.0",
+    "eslint-config-next": "15.3.3",
+    "eslint-config-prettier": "10.1.5",
+    "prettier": "3.5.3",
+    "typescript": "^5.8.3"
   },
   "prettier": {
     "printWidth": 120,
