--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.6",
+    "bootstrap-icons": "^1.13.1",
     "date-fns": "^4.1.0",
+    "i18next": "^25.2.1",
+    "i18next-resources-to-backend": "^1.2.1",
     "next": "15.3.3",
     "next-i18next": "15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-google-recaptcha": "^3.1.0"
+    "react-google-recaptcha": "^3.1.0",
+    "react-i18next": "^15.5.2"
   },
   "devDependencies": {
     "@types/node": "^22.15.24",
@@ -25,6 +30,7 @@
     "eslint-config-next": "15.3.3",
     "eslint-config-prettier": "10.1.5",
     "prettier": "3.5.3",
+    "sass": "^1.89.0",
     "typescript": "^5.8.3"
   },
   "prettier": {
